# bullet-slim

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake-single-platform.yml  codeql.yml  pages.yml  release.yml
apt/: fix.py
assets/: level0.map  level1.map  level2.map  level3.map  test2.map
include/: boss.h  bullet.h  catapult.h  game.h  laser.h  level.h  menu.h  moving-guide.h  obstacle.h  platform.h  player.h  rock.h  texture.h  title.h  utils.h
scripts/: bullet-slim.html  createMap.py  template.html
src/: boss.cpp  bullet.cpp  catapult.cpp  game.cpp  laser.cpp  level.cpp  main.cpp  menu.cpp  moving-guide.cpp  obstacle.cpp  platform.cpp  player.cpp  rock.cpp  texture.cpp  title.cpp  utils.cpp
web/: index.html  index.js  style.css
